--- a/common-collections/Cargo.toml
+++ b/common-collections/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+mockall = "0.7.1"
+mockall_derive = "0.7.1"
+regex = "1.3.9"
