--- a/common-collections/Cargo.toml
+++ b/common-collections/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 authors = ["Alex Garland <agarland@hotels.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+log = "0.4.8"
+simple_logger = "1.6.0"
+regex = "1.3.9"
+lazy_static = "1.4.0"
+# Test dependencies
 mockall = "0.7.1"
 mockall_derive = "0.7.1"
-regex = "1.3.9"
+testing_logger = "0.1.1"
