--- a/employee-management/Cargo.toml
+++ b/employee-management/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
-name = "common-collections"
+name = "employee-management"
 version = "0.1.0"
-authors = ["Alex Garland <agarland@hotels.com>"]
+authors = ["Alex Garland <alex.d.garland@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 log = "0.4.8"
 simple_logger = "1.6.0"
+regex = "1.3.9"
 # Test dependencies
 mockall = "0.7.1"
 mockall_derive = "0.7.1"
+testing_logger = "0.1.1"
