--- a/minigrep/Cargo.toml
+++ b/minigrep/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# Test dependencies
+mockall = "0.7.1"
+mockall_derive = "0.7.1"
